--- a/Prot_TG_FrontEnd/src/app/cadastro/cadastro.component.css
+++ b/Prot_TG_FrontEnd/src/app/cadastro/cadastro.component.css
@@ -1,18 +1,17 @@
-/* Reset */
-*, *::before, *::after {
-  box-sizing: border-box;
+html, body {
   margin: 0;
   padding: 0;
-  border: 0;
+  height: 100%;
+  background: linear-gradient(to bottom right, #14b8a6, #0f766e);
 }
+
 
 /* Container principal */
 .cadastro-container {
   font-family: 'Arial', sans-serif;
-  background: linear-gradient(to bottom right, #14b8a6, #0f766e);
   min-height: 100vh;
   padding: 20px;
-  width: 100%;
+  width: 98%;
 }
 
 
