--- a/Prot_TG_FrontEnd/src/app/cadastro/cadastro.component.css
+++ b/Prot_TG_FrontEnd/src/app/cadastro/cadastro.component.css
@@ -1,17 +1,10 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background: linear-gradient(to bottom right, #14b8a6, #0f766e);
-}
-
-
 /* Container principal */
 .cadastro-container {
   font-family: 'Arial', sans-serif;
   min-height: 100vh;
-  padding: 20px;
-  width: 98%;
+   background: linear-gradient(to bottom right, #14b8a6, #0f766e);
+  display: flex;
+  flex-direction: column;
 }
 
 
